[package]
name = "zcash_primitives"
description = "Rust implementations of the Zcash primitives"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aes = "0.7"
bitvec = "0.22"
blake2b_simd = "0.5"
blake2s_simd = "0.5"
bls12_381 = "0.5"
byteorder = "1"
crypto_api_chachapoly = "0.5"
equihash = { version = "0.1", path = "../components/equihash" }
ff = "0.10"
fpe = "0.5"
group = "0.10"
hex = "0.4"
jubjub = "0.7"
lazy_static = "1"
log = "0.4"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
rand_core = "0.6"
ripemd160 = { version = "0.9", optional = true }
secp256k1 = { version = "0.20", optional = true }
sha2 = "0.9"
subtle = "2.2.3"

[dev-dependencies]
criterion = "0.3"
hex-literal = "0.3"
proptest = "0.10.1"
rand_xorshift = "0.2"

[features]
transparent-inputs = ["ripemd160", "secp256k1"]
test-dependencies = ["proptest"]
zfuture = []

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "pedersen_hash"
harness = false

[badges]
maintenance = { status = "actively-developed" }
